--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    Oieeeeeeeee
+    <a href="/create/">Cadastro de Usuários</a>
     <script src="{% static 'js/javascript.js' %}"></script>
 </body>
 </html>
