--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -12,13 +12,19 @@
 <body>
     <form name="form-users" id="formUsers" method="post" action="/store/">
         <div class="col-6 mt-4 m-auto">
+            {% if msg %}
+                <div class="alert {{class}}">
+                    {{msg}}
+                </div>
+            {% endif %}
+             
             {% csrf_token %}
             <input class="form-control mt-4" type="text" name="name" id="name" placeholder="Nome">
-            <input class="form-control mt-4" type="text" name="name" id="user" placeholder="Nome de Usuário">
-            <input class="form-control mt-4" type="text" name="name" id="password" placeholder="Senha">
-            <input class="form-control mt-4" type="text" name="name" id="password-conf" placeholder="Repita a senha">
-            <input class="form-control mt-4" type="text" name="name" id="email" placeholder="Email">
-            <input class="btn btn-primary mt-4" type="submit" values="Cadastrar">
+            <input class="form-control mt-4" type="text" name="username" id="user" placeholder="Nome de Usuário">
+            <input class="form-control mt-4" type="password" name="password" id="password" placeholder="Senha">
+            <input class="form-control mt-4" type="password" name="password-conf" id="password-conf" placeholder="Repita a senha">
+            <input class="form-control mt-4" type="email" name="email" id="email" placeholder="Email">
+            <input class="btn btn-primary mt-4" type="submit" value="Cadastrar">
         </div>
     </form>
     <script src="{% static 'js/javascript.js' %}"></script>
