--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -1,17 +1,21 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <a href="/create/">Cadastro de Usuários</a> <br>
-    <a href="/painel/">Painel de Login</a>
-    <script src="{% static 'js/javascript.js' %}"></script>
+{% if request.user.is_authenticated %}
+    <h1>Área restrita</h1>
+    <p>Bem-vindo, {{ request.user.first_name }}!</p>
+{% else %}
+    <p>Você não tem acesso a esta área. Por favor, faça login.</p>
+{% endif %}
+
+<script src="{% static 'js/javascript.js' %}"></script>
 </body>
 </html>
