--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -12,6 +12,7 @@
 {% if request.user.is_authenticated %}
     <h1>Área restrita</h1>
     <p>Bem-vindo, {{ request.user.first_name }}!</p>
+    <a href="/logouts/">Sair</a>
 {% else %}
     <p>Você não tem acesso a esta área. Por favor, faça login.</p>
 {% endif %}
